Connection Provider - Dependencies added.

--- a/Connection_Provider_-_Simple_Serial/build.gradle
+++ b/Connection_Provider_-_Simple_Serial/build.gradle
@@ -7,9 +7,9 @@ buildscript {
 		}
 	}
 	dependencies {
-		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.60"
-		classpath "org.jetbrains.kotlin:kotlin-reflect:1.1.60"
-		classpath "net.milosvasic.groot:Groot:1.0.0-Beta-1"
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.10"
+		classpath "org.jetbrains.kotlin:kotlin-reflect:1.2.10"
+		classpath "net.milosvasic.groot:Groot:1.0.0-Beta-3"
 	}
 }
 
@@ -19,7 +19,7 @@ apply plugin: "groot-credentials"
 
 groot.registerRepository("http://repo.milosvasic.net/releases")
 
-groot.kotlin.version = "1.1.60"
+groot.kotlin.version = "1.2.10"
 
 final alpha = 0
 final beta = 0
@@ -41,4 +41,8 @@ groot.kotlin.project.setup(
 
 String fullPackage = groot.kotlin.project.projectPackage
 String fullVersion = groot.kotlin.project.projectVersion
+
+dependencies {
+	compile project('::Connection_Provider_-_Commons')
+}
 
