--- a/Connection_Provider_-_Commons/build.gradle
+++ b/Connection_Provider_-_Commons/build.gradle
@@ -18,16 +18,19 @@ apply plugin: "groot-kotlin"
 apply plugin: "groot-credentials"
 
 groot.registerRepository("http://repo.milosvasic.net/releases")
+groot.registerRepository("http://repo.milosvasic.net/development")
 
 groot.kotlin.version = "1.2.10"
+
+groot.depend("net.milosvasic.logger", "Logger", "1.2.3")
 
 final alpha = 0
 final beta = 0
 final version = 1
 final secondaryVersion = 0
 final tertiaryVersion = 0
-final projectPackage = "net.milosvasic.connection"
-final projectGroup = "provider"
+final projectPackage = "commons"
+final projectGroup = "net.milosvasic.connection.provider"
 
 groot.kotlin.project.setup(
         alpha,
@@ -42,3 +45,7 @@ groot.kotlin.project.setup(
 String fullPackage = groot.kotlin.project.projectPackage
 String fullVersion = groot.kotlin.project.projectVersion
 
+groot.deployment.ftp.host = ftpServer
+groot.deployment.ftp.username = ftpUsername
+groot.deployment.ftp.password = ftpPassword
+groot.deployment.setup(fullPackage, fullVersion)
