--- a/Connection_Provider_-_Simple_Serial/build.gradle
+++ b/Connection_Provider_-_Simple_Serial/build.gradle
@@ -18,11 +18,11 @@ apply plugin: "groot-kotlin"
 apply plugin: "groot-credentials"
 
 groot.registerRepository("http://repo.milosvasic.net/releases")
-groot.registerRepository("http://repo.milosvasic.net/development")
 
 groot.kotlin.version = "1.2.10"
 
 groot.depend("net.milosvasic.logger", "Logger", "1.2.3")
+groot.depend("net.milosvasic.testing.toolkit", "TestingToolkit", "1.0.0")
 
 final alpha = 0
 final beta = 0
